# BSE

./: .gitignore  .gitmodules  CMakeLists.txt  CompileNuklear.rb  README.md  setup_cmake.rb
Documnetation/: Refrances.md
Engine/: BSE.h  CMakeLists.txt  Define.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Noise.cpp  Noise.h  StandardInclude.h  Time.cpp  Time.h  Window.cpp  Window.h
Engine/Events/: WindowEvent.cpp  WindowEvent.h
Engine/Input/: InputManager.h  Key.h
Engine/NodeSystem/: Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  RootNode.h  Scene.cpp  Scene.h
Engine/Renderer/: Camera.cpp  Camera.h  Material.cpp  Material.h  Model.cpp  Model.h  OpenGL.h  Shader.cpp  Shader.h  Texture2D.h
Engine/Sound/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h
Engine/Threading/: ThreadingSystem.h
Events/: WindowEvent.h
Extras/Materials/: DefaultMaterial.mat  Glass.mat  Grass.mat  Ice.mat  Plastic.mat  Rock.mat
Extras/Materials/Textures/: README.txt
Extras/Shaders/: PBRBasic.frag  PBRBasic.vert
Helpers/: MeshExporter.py
Input/: InputManager.cpp  InputManager.h  Key.h
Level/: StaticObject.cpp  StaticObject.h
Networking/: Cerialization.cpp  Cerialization.h  Client.cpp  Client.h  Connection.cpp  Connection.h  DataSerializer.cpp  DataSerializer.h  ENet.h  NetConfig.cpp  NetConfig.h  PacketTypes.h  Server.cpp  Server.h  ServerMain.cpp  ServerMain.h
NodeGraph/: Components.h  Node.h  Scene.h
Physics/: Jolt.h  Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsMaterial.cpp  PhysicsMaterial.h  React.h  Shape.h
Renderer/: AssimpModelLoader.cpp  AssimpModelLoader.h  Buffer.cpp  Buffer.h  Camera.h  ColorRamp.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Model.cpp  Model.h  OpenGL.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Scripting/: LuaCore.cpp  LuaCore.h
Shaders/: BasicModelRender.frag  BasicModelRender.vert
Sound/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h
Test/: WindowMain.cpp
Threading/: ThreadingSystem.cpp  ThreadingSystem.h
Tools/ModelViewer/: ModelViewer.cpp
