
set(SOURCES
    "Events/WindowEvent.cpp"
    "Events/WindowEvent.h"
    "Input/InputManager.cpp"
    "Input/InputManager.h"
    "Input/Key.h"
    "NodeSystem/Node.cpp"
    "NodeSystem/Node.h"
    "NodeSystem/NodeManager.cpp"
    "NodeSystem/NodeManager.h"
    "NodeSystem/Scene.cpp"
    "NodeSystem/Scene.h"
    "Renderer/OpenGL.h"
    "Renderer/Model.cpp"
    "Renderer/Model.h"
    "Renderer/Material.cpp"
    "Renderer/Material.h"
    "Renderer/Texture2D.cpp"
    "Renderer/Texture2D.h"
    "Renderer/Shader.cpp"
    "Renderer/Shader.h"
    "Renderer/Camera.cpp"
    "Renderer/Camera.h"
    "STB/stb_image.h"
    "Sound/OpenAL.h"
    "Sound/Sound.cpp"
    "Sound/Sound.h"
    "Sound/SoundManager.cpp"
    "Sound/SoundManager.h"
    "Threading/ThreadingSystem.cpp"
    "Threading/ThreadingSystem.h"
    "Define.h"
    "SDL_Include.h"
    "BSE.h"
    "Engine.cpp"
    "Engine.h"
    "FileSystem.cpp"
    "FileSystem.h"
    "Logger.cpp"
    "Logger.h"
    "Time.cpp"
    "Time.h"
    "Window.cpp"
    "Window.h"
)

add_library(BSE_Core SHARED "${SOURCES}")

target_link_libraries(BSE_Core PUBLIC SDL3::SDL3 OpenGL::GL GLEW::GLEW TBB::tbb OpenAL::OpenAL)
